--- a/_config.yml
+++ b/_config.yml
@@ -7,20 +7,20 @@ permalink:        pretty
 relative_permalinks: false
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://hyde.getpoole.com
+title:            Neoplanetz
+tagline:          'To wide knowledge'
+description:      'New Neoplanetz Blog'
+url:              https://neoplanetz.github.io/
 baseurl:          /
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'YoHan Jung'
+  url:            https://neoplanetz.github.io/
 
 paginate:         5
 
 # Custom vars
-version:          2.1.0
+version:          1.0
 
-github:
-  repo:           https://github.com/poole/hyde
+github:           https://github.com/Neoplanetz
+  repo:           https://github.com/Neoplanetz/neoplanetz.github.io
