--- a/_config.yml
+++ b/_config.yml
@@ -23,4 +23,4 @@ paginate:         5
 version:          1.0
 
 github:           
-  repo:           https://github.com/Neoplanetz
+  repo:           https://github.com/Neoplanetz/neoplanetz.github.io/
